[gd_scene load_steps=5 format=2]

[ext_resource path="res://arts/right_pallete.png" type="Texture" id=1]
[ext_resource path="res://arts/left_pallete.png" type="Texture" id=2]
[ext_resource path="res://arts/ball.png" type="Texture" id=4]
[ext_resource path="res://scripts/GameNode2D.gd" type="Script" id=5]

[node name="GameNode2D" type="Node2D"]
script = ExtResource( 5 )

[node name="PlayerLeftSprite" type="Sprite" parent="."]
position = Vector2( 67, 183 )
texture = ExtResource( 2 )

[node name="PlayerRightSprite" type="Sprite" parent="."]
position = Vector2( 577, 187 )
texture = ExtResource( 1 )

[node name="BallSprite" type="Sprite" parent="."]
position = Vector2( 320, 188 )
texture = ExtResource( 4 )
